--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,23 @@
 }
 
 .App-header {
-  min-height: 80vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   font-size: calc(10px + 2vmin);
+  text-shadow: 0.5px 0.5px #FFD001
+}
+
+.Socials {
+  min-width: 50vh;
+  min-height: inherit;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: calc(10px + 1.5vmin);
   text-shadow: 0.5px 0.5px #FFD001
 }
 
